<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skimax.basicphrasesapp.MainActivity">

    <GridLayout
        android:layout_width="361dp"
        android:layout_height="475dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/hello" />

        <Button
            android:id="@+id/howareyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/howareyou" />


        <Button
            android:id="@+id/goodevening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/goodevening" />

        <Button
            android:id="@+id/please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/please" />

        <Button
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/welcome" />

        <Button
            android:id="@+id/mynameis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/mynameis" />

        <Button
            android:id="@+id/doyouspeakenglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/doyouspeak" />

        <Button
            android:id="@+id/ilivein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:onClick="ButtonTapped"
            android:text="@string/ilivein" />



    </GridLayout>
</android.support.constraint.ConstraintLayout>
